@@ -1,16 +1,16 @@
-DIST resourceproto-1.0.2.tar.bz2 36859 RMD160 8b665848d4ec2ccacb243bc058268a41b96124c9 SHA1 ac22c2e439067185ea169d20677f74321da7b34b SHA256 0c33d6fceef5483001459bdc934b5831502250b27f1f4ad370ab044f8ab53487
-EBUILD resourceproto-1.0.2.ebuild 503 RMD160 d97be35881b381c437a2b02192c0b28083ae15da SHA1 86c07f696656426bd21999cab9a518a6442a1e94 SHA256 c88254806e711bc60d1efbfe431c6890ae80ec3d9a0e1d4c90828bfe7438700e
-MD5 3f279e4501a8a1b0b094fd3ce48be7e1 resourceproto-1.0.2.ebuild 503
-RMD160 d97be35881b381c437a2b02192c0b28083ae15da resourceproto-1.0.2.ebuild 503
-SHA256 c88254806e711bc60d1efbfe431c6890ae80ec3d9a0e1d4c90828bfe7438700e resourceproto-1.0.2.ebuild 503
-MISC ChangeLog 2891 RMD160 663897d356f013e15b67cf26614740083acc1390 SHA1 e99fc8a832968938b6d7cc10cf90a6690cc531bc SHA256 378e58e5d89b1dd95233b98e86486726d041a3bbd785734c66a670f1fab902b2
-MD5 eb13c0b7f4cb79493b9c1d630d296978 ChangeLog 2891
-RMD160 663897d356f013e15b67cf26614740083acc1390 ChangeLog 2891
-SHA256 378e58e5d89b1dd95233b98e86486726d041a3bbd785734c66a670f1fab902b2 ChangeLog 2891
+DIST resourceproto-1.0.2.tar.bz2 36827 RMD160 01acf0cb35949eed0ef93bc1cea44ea47e742771 SHA1 75c051ea69ad706e31ff9c61c2c6fc9de32a0ca9 SHA256 e3cb3c07f06d4642f06015277c6cd40b1e396cae06e5d2029d3f89805211bbfa
+EBUILD resourceproto-1.0.2.ebuild 469 RMD160 e65b29c7de258d8de0493d7ebefb4298e0928970 SHA1 bbbcd12ecd651b77d1a30fe7fc94b057d671a8a7 SHA256 c2a889810f1ed46ea6d64aeec261ae360dfae7c476b683d4cab8933c9cede7f8
+MD5 1a06970a16c76869602c255340ac66a9 resourceproto-1.0.2.ebuild 469
+RMD160 e65b29c7de258d8de0493d7ebefb4298e0928970 resourceproto-1.0.2.ebuild 469
+SHA256 c2a889810f1ed46ea6d64aeec261ae360dfae7c476b683d4cab8933c9cede7f8 resourceproto-1.0.2.ebuild 469
+MISC ChangeLog 3029 RMD160 da8fcb54d16c7a0d26e09a009df8b87526459b4d SHA1 6c65fea2b13fb46183ff90890aae17265a415980 SHA256 114536706423297db0727b312e12254942c38db7b644c4703ff31ccda59731db
+MD5 79a5a47a473522369697464863c2df05 ChangeLog 3029
+RMD160 da8fcb54d16c7a0d26e09a009df8b87526459b4d ChangeLog 3029
+SHA256 114536706423297db0727b312e12254942c38db7b644c4703ff31ccda59731db ChangeLog 3029
 MISC metadata.xml 156 RMD160 c1274bdccf57603d580de0075ba07a35b7509560 SHA1 6f78f604e3d079d39189b40aaaa1ddb06182ad91 SHA256 5101ab0d4cc8c7125eea733c44e86962769bd77acaf53b69223b9cadcdd29055
 MD5 a37bab73e2f24b213932c30997d3d360 metadata.xml 156
 RMD160 c1274bdccf57603d580de0075ba07a35b7509560 metadata.xml 156
 SHA256 5101ab0d4cc8c7125eea733c44e86962769bd77acaf53b69223b9cadcdd29055 metadata.xml 156
-MD5 f14a3620676fda88dc87abc316ccaa76 files/digest-resourceproto-1.0.2 259
-RMD160 6e4db6d6aac70e81b668a010c1c56b472b4ae11f files/digest-resourceproto-1.0.2 259
-SHA256 14629b71fed8bac6982c3cf2faf88a7bd7d94ffa079c58a2c8b9081c1af36603 files/digest-resourceproto-1.0.2 259
+MD5 38b4b01f51dc65a85f7ad37a53fc5ffb files/digest-resourceproto-1.0.2 259
+RMD160 39e35758b5163cfdf1a050b59b95be6564e5d7cb files/digest-resourceproto-1.0.2 259
+SHA256 be862f95df1d59039930bbbb396a5f867d5874a93cf1fd2ff9bc5b86e4038469 files/digest-resourceproto-1.0.2 259
