@@ -1,3 +1,3 @@
-MD5 b823b314e37eb19dae1f297951d2e933 resourceproto-1.0.2.tar.bz2 36859
-RMD160 8b665848d4ec2ccacb243bc058268a41b96124c9 resourceproto-1.0.2.tar.bz2 36859
-SHA256 0c33d6fceef5483001459bdc934b5831502250b27f1f4ad370ab044f8ab53487 resourceproto-1.0.2.tar.bz2 36859
+MD5 8c58b7c060e86da3e09fd2fdaf5244e3 resourceproto-1.0.2.tar.bz2 36827
+RMD160 01acf0cb35949eed0ef93bc1cea44ea47e742771 resourceproto-1.0.2.tar.bz2 36827
+SHA256 e3cb3c07f06d4642f06015277c6cd40b1e396cae06e5d2029d3f89805211bbfa resourceproto-1.0.2.tar.bz2 36827
